--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.18.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "yarn": "^1.16.0"
   },
   "scripts": {
     "start": "react-app-env start",
