--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8",
+    "stop-runaway-react-effects": "^1.2.0",
     "yarn": "^1.16.0"
   },
   "scripts": {
